fix: Added missing borders on choice buttons

--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,8 @@ input,button {
 }
 
 .choice {
+    border-style: solid;
+    border-color: dimgrey;
     border-radius: 20px;
     background-color:gainsboro;
     width: 100px;
